force-app/main/default/objects/Update_Order__c/Update_Order__c.object-meta.xml
<CustomObject>
    <label>Update Order</label>
    <nameField>
        <label>Update Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Update Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>