force-app/main/default/objects/Update_Order__c/fields/Guest_User__c.field-meta.xml
<CustomField>
    <fullName>Guest_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guest User</label>
    <type>Checkbox</type>
</CustomField>