force-app/main/default/objects/Update_Order__c/fields/List_of_Fields__c.field-meta.xml
<CustomField>
    <fullName>List_of_Fields__c</fullName>
    <label>List of Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>