force-app/main/default/objects/Update_Order__c/fields/List_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>List_Prior_Value__c</fullName>
    <label>List Prior Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>