force-app/main/default/objects/Update_Order__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>Object Api Name</label>
    <type>TextArea</type>
</CustomField>