force-app/main/default/objects/Update_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Api_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>List_of_Values__c</columns>
    <columns>List_Prior_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>